# SettingAgent01

./: .gitignore  CLAUDE.md  package-lock.json  package.json  setagent.bat  setviewer.bat
.claude/: settings.json
.claude/agents/: architect.md  developer.md  documenter.md  qa-tester.md
.claude/checkpoints/: 2026-07-21_클릭조준_정확도_보류.md  README.md
ActionAgent/docs/: 20260624_162408_ActionAgent_설계서.md
DMAgent/docs/: 20260624_162408_DMAgent_설계서.md
Docs/: 20260624_162408_00_전체아키텍처_설계서.md  20260707_중간_설계수정_원시데이타.md  20260715_174638_병렬작업_git워크트리_가이드.md  CWebCamCtrlServer_API_클라이언트연동_NodeJS_TS.md  설계_데이터모음.txt
Docs/MyThink/: my_db_table.md  my_think.md
SettingAgent/: README.md  _qa_assoc_iou.ts  _qa_frame_cuboids.ts  _qa_live_roi_overlay.mjs  package.json  tsconfig.json
SettingAgent/_workspace/: 00_RESUME_클릭센터줌.md  00_goal.md  00_goal_order.md  00_leader_context.md  01_architect_plan.md  02_developer_changes.md  02_developer_changes_acquire.md  02a_developer_dbcore.md  02c_developer_capture.md  03_qa_report.md  04_doc_impact.md  05_architect_plan_cuboid.md  05_architect_plan_logsummary.md  06_architect_plan_anchor.md  06_developer_changes_logsummary.md  06_developer_real_settle.md  07_qa_report_cuboid.md  07_qa_report_logsummary.md  08_doc_impact_cuboid.md  08_doc_impact_logsummary.md  08_qa_report_lpd.md  11_doc_impact_lpd.md  15_developer_changes_downratio.md  (+1 more)
SettingViewer/: README.md  nodemon.json  package.json
Sub/HyucomsAPI/: HUCOMS_API_DESIGN.md  README.md  pyproject.toml
Sub/HyucomsAPI/hyucoms_api/: __init__.py  client.py  errors.py  models.py  parser.py  transport.py
Sub/HyucomsAPI/tests/: test_client.py  test_parser.py
Sub/lpd_api/: README.md  config.py  main.py  pyproject.toml
Sub/lpd_api/detectors/: yolov8.py
Sub/lpd_api/detectors/.ipynb_checkpoints/: yolov8-checkpoint.py
Sub/lpd_api/docs/: API_RESPONSE_EXAMPLES.md
Sub/lpd_api/routers/: yolo.py
Sub/lpd_api/routers/.ipynb_checkpoints/: yolo-checkpoint.py
Sub/lpd_api/schemas/: yolo.py
Sub/vpd_api/: .gitignore  CMakeLists.txt  Makefile  README.md  config.py  main.py  profile.html  profile.json  pyproject.toml  test_yolo11x_onnx.py  yolo11x_inference.cpp
Sub/vpd_api/detectors/: yolo_infer.py
Sub/vpd_api/routers/: yolo.py
Sub/vpd_api/schemas/: yolo.py
etc/: 20260704_224303_llm_config_vllm_점검.md  CamPos_Seosin.json  qwen25vl32b_vllm_setup.md  run_qwen25vl32b_vllm.sh
scripts/: wt.ps1
메모/: INDEX.md  memo.md
(+853 files in other folders)
