[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hyucoms-api"
version = "0.1.0"
description = "Independent Hucoms camera HTTP API v1.22 client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.unittest]
testpaths = ["tests"]
