[project]
name = "lpd-api"
version = "0.1.0"
description = "LPD API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "logfire[fastapi]>=2.11.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "starlette>=0.41.3",
    "uvicorn>=0.34.0",
    "opencv-contrib-python>=4.10.0.84",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
    "opentelemetry-instrumentation-asgi>=0.50b0",
    "ultralytics>=8.3.99",
    "supervision>=0.25.1",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
